got rid of edits
